# interpreter_in_rust

./: Cargo.toml
res/examples/: fibo.txt
res/tests/: lexer  lexer.txt
src/: lib.rs  main.rs
src/error/: mod.rs
src/evaluator/: environment.rs  mod.rs  object.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs  precedences.rs
src/parser/ast/: expression.rs  mod.rs  statement.rs
src/repl/: mod.rs
tests/: lexer.rs  parser.rs
