[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
thiserror   = "1.*"
anyhow      = "1.*"

# Fancy stuff
colored = "2.*"
clap = { version = "4.3.0", features = ["derive"] }

# Unique identifier
nanoid = "0.4.*"
